# Schedule_app

./: .gitignore  CLAUDE.md  README.md
assets/: 오늘의_계획표.html
desktop/: .gitignore  package-lock.json  package.json
desktop/public/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs  update.rs  win_desktop.rs  win_webview.rs
docs/: 2단계-Supabase-카카오-설정.md  AI-시간표-비용-산정.md  iOS-앱.md  구글-캘린더-연동.md  안드로이드-앱.md  위젯-설계.md  조직-워크스페이스.md  프로젝트-현황.md
mobile/: capacitor.config.ts  package-lock.json  package.json
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/ilgongbang/app/: MainActivity.java  ScheduleAlarm.java  ScheduleNoticePlugin.java  (+4 more)
mobile/android/app/src/main/res/drawable/: ic_stat_schedule.xml  widget_background.xml  widget_progress.xml
mobile/android/app/src/main/res/layout/: widget_schedule.xml
mobile/android/app/src/main/res/values/: strings.xml  styles.xml
mobile/android/app/src/main/res/xml/: widget_schedule_info.xml
mobile/scripts/: android-env.ps1  build-release.ps1  install-debug.ps1  make-icons.mjs  make-keystore.ps1
supabase/: google-calendar-cron.sql  google-calendar-schema.sql  org-schema.sql  schema.sql
supabase/functions/google-calendar-callback/: index.ts
supabase/functions/google-calendar-sync/: index.ts
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
web/src/components/: AuthBar.tsx  BlockDetail.tsx  BlockEditor.tsx  DayEventsPopup.tsx  DayTabs.tsx  DownloadWidget.tsx  InviteDialog.tsx  LoginScreen.tsx  MonthView.tsx  NameDialog.tsx  NoticeToggle.tsx  OrgDialog.tsx  OrgPlanEditor.tsx  OrgWorkspace.tsx  Planner.tsx  PresetBar.tsx  PresetSidebar.tsx  QuickAddRow.tsx  ScheduleCard.tsx  TeamOverlapGrid.tsx  ViewToggle.tsx  WeekGrid.tsx  WidgetBody.tsx  WidgetView.tsx  WorkspaceSwitcher.tsx
web/src/data/: defaultPreset.ts  sampleCalendar.ts
web/src/hooks/: useActiveSchedule.ts  useAuth.tsx  useBlockDrag.ts  useCalendarSchedule.ts  useMediaQuery.ts  useNow.ts  useOrg.tsx  usePresetStore.tsx  useScheduleAttention.ts  useScheduleNotice.ts  useScheduleNotice.tsx  useSharedScheduleSync.ts  useViewMode.ts  useWidgetPresets.ts
web/src/lib/: calendarStorage.ts  cloudStorage.ts  googleCalendar.ts  id.ts  inviteLink.ts  monthGrid.ts  nativeAuth.ts  orgStorage.ts  scheduleNotice.ts  storage.ts  supabaseClient.ts  time.ts  widgetBlocks.ts  widgetCache.ts  widgetMode.ts  widgetWindow.ts
web/src/styles/: app.css  tokens.css
