[package]
name = "schedule-widget"
version = "0.1.0"
description = "일정공방 데스크탑 위젯"
authors = ["Enryu"]
edition = "2021"

[lib]
name = "schedule_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

# Win+D(바탕화면 보기)를 무시하려면 창 메시지를 직접 가로채야 해서 Win32 API 를 쓴다.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }
