[package]
name = "schedule-widget"
version = "0.1.6"
description = "일정공방 데스크탑 위젯"
authors = ["Enryu"]
edition = "2021"

[lib]
name = "schedule_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# tauri.conf.json 의 플러그인 설정(updater 등)을 코드로 만들 때 generate_context! 가 요구한다.
serde_json = "1"

# 창 위치/크기 기억, 윈도우 시작 시 자동 실행.
# 레지스트리(Run 키)를 직접 건드리는 대신 공식 플러그인을 쓴다 — 우리가 관리할 코드가 줄어든다.
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"

# 자동 업데이트. 서명된 릴리스만 설치하도록 공개키로 검증한다(가짜 업데이트 차단).
tauri-plugin-updater = "2"
# 업데이트 여부를 물어보는 창. (위젯을 쓰는 도중에 말없이 재시작하면 당황스럽다)
tauri-plugin-dialog = "2"

# Win+D(바탕화면 보기)를 무시하려면 창 메시지를 직접 가로채야 해서 Win32 API 를 쓴다.
# Accessibility: 바탕화면이 앞으로 나오는 순간을 잡는 SetWinEventHook 이 여기 있다.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Accessibility",
] }

# 웹뷰의 우클릭 메뉴/브라우저 단축키를 끄려면 WebView2 설정에 직접 접근해야 한다.
# 버전은 tauri 가 쓰는 것과 맞춰야 타입이 어긋나지 않는다.
webview2-com = "0.38"
